--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <div class="hidden md:flex space-x-8">
                     <a href="#home" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium">Home</a>
                     <a href="#products" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium active-nav">Products</a>
-                    <a href="#about" class="nav-link text-gray-7KZKhRU00 hover:text-green-700 px-3 py-2 text-sm font-medium">About</a>
+                    <a href="#events" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium">Events</a>
+                    <a href="#about" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium">About</a>
                     <a href="#testimonials" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium">Testimonials</a>
                     <a href="#contact" class="nav-link text-gray-700 hover:text-green-700 px-3 py-2 text-sm font-medium">Contact</a>
                 </div>
@@ -38,6 +39,7 @@
         <div class="mobile-menu hidden md:hidden bg-white shadow-lg">
             <a href="#home" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">Home</a>
             <a href="#products" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">Products</a>
+            <a href="#events" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">Events</a>
             <a href="#about" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">About</a>
             <a href="#testimonials" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">Testimonials</a>
             <a href="#contact" class="block px-4 py-2 text-sm text-gray-700 hover:bg-green-50">Contact</a>
@@ -121,6 +123,84 @@
                         <span class="text-green-700 font-bold">₹35</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Events & Bulk Orders Section -->
+    <section id="events" class="py-20 bg-green-50">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="text-center mb-14">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">We Cater Events & Bulk Orders</h2>
+                <p class="text-gray-600 max-w-3xl mx-auto">We accept invitations, family functions, weddings, corporate events, parties, and all kinds of bulk orders. Freshly prepared paan with hygienic setup and professional service.</p>
+            </div>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-people-group text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">Family Functions</h3>
+                            <p class="text-gray-600 text-sm">Engagements, birthdays, anniversaries and more.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-ring text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">Weddings & Receptions</h3>
+                            <p class="text-gray-600 text-sm">On‑site paan counter with elegant presentation.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-building text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">Corporate & Parties</h3>
+                            <p class="text-gray-600 text-sm">Office events, festivals, get‑togethers.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-truck text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">Bulk Delivery</h3>
+                            <p class="text-gray-600 text-sm">Freshly packed paan delivered to your venue.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-list-check text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">Custom Menu</h3>
+                            <p class="text-gray-600 text-sm">Meetha, Sada, Chocolate, Banarasi and more.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow">
+                    <div class="flex items-start">
+                        <i class="fa-solid fa-person-booth text-green-600 text-2xl mr-4"></i>
+                        <div>
+                            <h3 class="font-bold text-gray-800 mb-1">On‑Site Stall</h3>
+                            <p class="text-gray-600 text-sm">Neat, hygienic setup with trained staff.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-10 flex flex-col sm:flex-row items-center justify-center gap-4">
+                <a href="https://wa.me/919553359408?text=Hi%20Paan%20Mahal%2C%20I%20want%20to%20book%20for%20an%20event" class="bg-green-600 hover:bg-green-700 text-white font-semibold px-6 py-3 rounded-full inline-flex items-center gap-2 shadow">
+                    <i class="fab fa-whatsapp text-xl"></i>
+                    Get a Quote on WhatsApp
+                </a>
+                <a href="tel:+919553359408" class="bg-white hover:bg-gray-100 text-green-700 border border-green-600 font-semibold px-6 py-3 rounded-full inline-flex items-center gap-2 shadow">
+                    <i class="fa-solid fa-phone"></i>
+                    Call Now
+                </a>
             </div>
         </div>
     </section>
