--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400 mb-4 md:mb-0">© 2025 Paan Mahal. All rights reserved.</p>
-                <p>Developed by <a href="https://zsquare.in">Zsquare.in</a></p>
+                <p>Developed by <a style="color: green;" href="https://zsquare.in">Zsquare.in</a></p>
                 <div class="flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white transition duration-300">
                         <i class="fab fa-cc-visa"></i>
